test: 변경된 숙소 등록 서비스 코드에 맞게 테스트 코드 또한 수정